# DL4AGX

.github/workflows/: build.yaml
AV-Solutions/vad-trt/: .gitignore
AV-Solutions/vad-trt/app/: .gitignore  CMakeLists.txt  main.cpp
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/: CMakeLists.txt  TEST.md  package.xml  test_log.cpp
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/config/: ml_package_vad_tiny.param.yaml  vad_tiny.param.yaml
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/include/autoware/tensorrt_vad/: debug_behind_tracker.hpp  net.h  net.hpp  ros_vad_logger.hpp  synchronization_strategy.hpp  tensor.h  tensor.hpp  vad_config.hpp  vad_interface.hpp  vad_interface_config.hpp  vad_model.hpp  vad_node.hpp  vad_trt.hpp
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/include/autoware/tensorrt_vad/networks/: net.hpp
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/launch/: vad.launch.xml
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/lib/: debug_behind_tracker.cpp  net.cpp  synchronization_strategy.cpp  tensor.cpp  tensor.h  vad_interface.cpp  vad_model.cpp  vad_model.hpp
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/lib/networks/: net.cpp
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/src/: vad_node.cpp
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/test/: CMakeLists.txt  mock_vad_logger.hpp  test_config_constants.hpp  test_vad_integration.cpp  test_vad_interface.cpp  test_vad_model.cpp
AV-Solutions/vad-trt/app/demo/: config.json  config_aw.json  ml_package_vad_tiny.param.yaml
AV-Solutions/vad-trt/app/demo/onnx_analysis/: analyze_onnx.py
AV-Solutions/vad-trt/app/demo/rosbag/: calculate_lidar2cam.py  convert_can_bus_bin_to_rosbag.py  convert_img_can_bus_bin_to_rosbag.py  qos_override.yaml  subscribe_tf_static.py
AV-Solutions/vad-trt/app/demo/time_sync/vad_mock/: README.md
AV-Solutions/vad-trt/app/demo/tools/: README.md  awsim_config_sample.yaml  trajectory_converter.py  trajectory_selector.py
AV-Solutions/vad-trt/app/include/autoware/tensorrt_vad/: networks  vad_config.hpp
AV-Solutions/vad-trt/app/lib/: debug.hpp  networks  ros_vad_logger.hpp  vad_interface.cpp  vad_interface.hpp  vad_interface_config.hpp  vad_model.cpp  vad_model.hpp  visualize.cpp  visualize.cu  visualize.hpp
AV-Solutions/vad-trt/app/test/: CMakeLists.txt  README.md  mock_vad_logger.hpp  stb_implementation.cpp  test_config.yaml  test_vad_infer.cpp  test_vad_infer_integration.cpp  test_vad_integration.cpp  test_vad_interface.cpp  test_vad_model.cpp
